objects/LAT_BR_Vacations__c.object
<CustomObject>
    <fields>
        <fullName>LAT_BR_VAC_Executive__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Executive</label>
        <referenceTo>User</referenceTo>
        <relationshipName>LAT_BR_Vacations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LAT_BR_VC_Month__c</fullName>
        <label>Month</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LAT_BR_VC_Year__c</fullName>
        <label>Year</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>LAT BR Vacations</label>
    <nameField>
        <displayFormat>V-{0000}</displayFormat>
        <label>LAT_BR_Vacations Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>LAT BR Vacations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>